
= GENI Clearinghouse and Portal Release Notes =

== 1.5 ==
  * Fix error return on renewslice error in pgch (for omni/Flack) (#555)
  * Remove some hardcoded URNs (progress on #10)
  * Clean up page to accept project invitations (#530)
  * Sign experimenter data message to GEMINI (#560)
  * Remove use of /bin/hostname in scripts & code (#354)
  * Fix a DB authentication bug in geni-add-trusted-tool (#505)
  * Clean up make install to avoid ~ and # files (#488)
  * Install operator scripts in /usr/local/bin on portals (#499)
  * Add `authority` field to omni-bundle and template omni_config (#551)
  * Update certificate creation instructions to match omni-configure (#552)
  * Make omni-bundle download be the same regardless of the number of projects (#566)
  * Clarify wording on user cert generation page (#567)

== 1.4 ==
  * Check for valid arguments in more spots (#5)
  * Ensure more methods have guards, and log on failed authorization (#501)
  * Added sbin/renew-certs script to renew service certificates (#507)
  * Add support for GetVersion in pgch (#492)
  * Add a revoke privilege script (#549)
  * Fix up revoking project lead and operator privileges (#550)
  * Bug fix for changing project leads (#512)
  * Fix Changing Slice leads (#537)
  * Quiet debug printouts (#531)
  * Enable preliminary support for data handoff to GEMINI (#503)
  * GENI IdP login formats strange on GEC16 tutorial VM (#452)
  * On portal login page, add link to GPO IdP account request form (#487)


== 1.3.1 ==
 * Add a missing copyright (#544)

== 1.3 ==
 * Start a CHANGELOG (#489)
 * Clearinghouse
   * Clean up privilege table (#493)
 * Portal
   * Displayed expired slices on project page but hidden by a button (#523) 
   * Allow removing members from projects, slices (#153)
   * Keys for all members included in createsliver (#248)
   * bulk add people to projects (#171)
   * slice membership (#58)
   * Allow adding known people to projects/slices (#86)
